{
  "version": 4,
  "terraform_version": "1.2.9",
  "serial": 27,
  "lineage": "43259d03-1aef-f8eb-e6e5-988b1931a88b",
  "resources": [
    {
      "module": "module.services",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08a1453fb2715978e",
            "association_id": "eipassoc-029879add12047ff5",
            "domain": "vpc",
            "id": "eipalloc-08a1453fb2715978e",
            "network_border_group": "us-east-1",
            "network_interface": "eni-06622393e2f9be5b3",
            "private_dns": "ip-10-0-1-18.ec2.internal",
            "private_ip": "10.0.1.18",
            "public_dns": "ec2-52-5-124-251.compute-1.amazonaws.com",
            "public_ip": "52.5.124.251",
            "public_ipv4_pool": "amazon",
            "tags": {
              "company": "Durianpay",
              "created_by": "pranay",
              "owner": "terraform"
            },
            "tags_all": {
              "company": "Durianpay",
              "created_by": "pranay",
              "owner": "terraform"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.services",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:399026184521:internet-gateway/igw-07566b47d3083b7ea",
            "id": "igw-07566b47d3083b7ea",
            "owner_id": "399026184521",
            "tags": {
              "Name": "duriyanpay_igw",
              "company": "Durianpay",
              "created_by": "pranay",
              "owner": "terraform"
            },
            "tags_all": {
              "Name": "duriyanpay_igw",
              "company": "Durianpay",
              "created_by": "pranay",
              "owner": "terraform"
            },
            "vpc_id": "vpc-03c1a64241e697119"
          },
          "dependencies": [
            "module.services.aws_vpc.durian-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.services",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NatGateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08a1453fb2715978e",
            "connectivity_type": "public",
            "id": "nat-0a8edbd05aa2c4cbf",
            "network_interface_id": "eni-06622393e2f9be5b3",
            "private_ip": "10.0.1.18",
            "public_ip": "52.5.124.251",
            "subnet_id": "subnet-04456662b4de47223",
            "tags": {
              "Name": "duriyanpay_nat",
              "company": "Durianpay",
              "created_by": "pranay",
              "owner": "terraform"
            },
            "tags_all": {
              "Name": "duriyanpay_nat",
              "company": "Durianpay",
              "created_by": "pranay",
              "owner": "terraform"
            }
          },
          "dependencies": [
            "module.services.aws_eip.eip",
            "module.services.aws_subnet.public",
            "module.services.aws_vpc.durian-vpc",
            "module.services.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.services",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "durian-private-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:399026184521:route-table/rtb-05370e657e31994bf",
            "id": "rtb-05370e657e31994bf",
            "owner_id": "399026184521",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0a8edbd05aa2c4cbf",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private_route",
              "company": "Durianpay",
              "created_by": "pranay",
              "owner": "terraform"
            },
            "tags_all": {
              "Name": "private_route",
              "company": "Durianpay",
              "created_by": "pranay",
              "owner": "terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-03c1a64241e697119"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.services.aws_nat_gateway.NatGateway",
            "module.services.aws_vpc.durian-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.services",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "durian-public-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:399026184521:route-table/rtb-0d88bdd3c2ed871ae",
            "id": "rtb-0d88bdd3c2ed871ae",
            "owner_id": "399026184521",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07566b47d3083b7ea",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_route",
              "company": "Durianpay",
              "created_by": "pranay",
              "owner": "terraform"
            },
            "tags_all": {
              "Name": "public_route",
              "company": "Durianpay",
              "created_by": "pranay",
              "owner": "terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-03c1a64241e697119"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.services.aws_internet_gateway.igw",
            "module.services.aws_vpc.durian-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.services",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-089c9c5ac63fabaa3",
            "route_table_id": "rtb-05370e657e31994bf",
            "subnet_id": "subnet-0f8e5da73a9a841ed"
          },
          "dependencies": [
            "module.services.aws_eip.eip",
            "module.services.aws_nat_gateway.NatGateway",
            "module.services.aws_route_table.durian-private-route-table",
            "module.services.aws_subnet.private",
            "module.services.aws_subnet.public",
            "module.services.aws_vpc.durian-vpc",
            "module.services.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.services",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cf9b11ca675c6d52",
            "route_table_id": "rtb-0d88bdd3c2ed871ae",
            "subnet_id": "subnet-04456662b4de47223"
          },
          "dependencies": [
            "module.services.aws_internet_gateway.igw",
            "module.services.aws_route_table.durian-public-route-table",
            "module.services.aws_subnet.public",
            "module.services.aws_vpc.durian-vpc",
            "module.services.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.services",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "durianpay_asg_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:399026184521:security-group/sg-0140d09ffc399ab20",
            "description": "Allow SSH into EC2",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0140d09ffc399ab20",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH from Personal CIDR block",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "duriyanpay_security",
            "name_prefix": "",
            "owner_id": "399026184521",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "duriyanpay_security",
              "company": "Durianpay",
              "created_by": "pranay",
              "owner": "terraform"
            },
            "tags_all": {
              "Name": "duriyanpay_security",
              "company": "Durianpay",
              "created_by": "pranay",
              "owner": "terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-03c1a64241e697119"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.services.aws_vpc.durian-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.services",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:399026184521:subnet/subnet-0f8e5da73a9a841ed",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f8e5da73a9a841ed",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "399026184521",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "duriyanpay_private",
              "company": "Durianpay",
              "created_by": "pranay",
              "owner": "terraform"
            },
            "tags_all": {
              "Name": "duriyanpay_private",
              "company": "Durianpay",
              "created_by": "pranay",
              "owner": "terraform"
            },
            "vpc_id": "vpc-03c1a64241e697119"
          },
          "dependencies": [
            "module.services.aws_vpc.durian-vpc",
            "module.services.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.services",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:399026184521:subnet/subnet-04456662b4de47223",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04456662b4de47223",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "399026184521",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "duriyanpay_public",
              "company": "Durianpay",
              "created_by": "pranay",
              "owner": "terraform"
            },
            "tags_all": {
              "Name": "duriyanpay_public",
              "company": "Durianpay",
              "created_by": "pranay",
              "owner": "terraform"
            },
            "vpc_id": "vpc-03c1a64241e697119"
          },
          "dependencies": [
            "module.services.aws_vpc.durian-vpc",
            "module.services.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.services",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "durian-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:399026184521:vpc/vpc-03c1a64241e697119",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-032fb18451fdd87bc",
            "default_route_table_id": "rtb-0487c71227a63e68b",
            "default_security_group_id": "sg-03d172edb9a89bf4d",
            "dhcp_options_id": "dopt-0f663fb257cee4b8c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-03c1a64241e697119",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0487c71227a63e68b",
            "owner_id": "399026184521",
            "tags": {
              "Name": "duriyanpay_vpc",
              "company": "Durianpay",
              "created_by": "pranay",
              "owner": "terraform"
            },
            "tags_all": {
              "Name": "duriyanpay_vpc",
              "company": "Durianpay",
              "created_by": "pranay",
              "owner": "terraform"
            }
          }
        }
      ]
    }
  ]
}